--- a/public/css/sign.css
+++ b/public/css/sign.css
@@ -1,28 +1,27 @@
-body {
-    padding-top: 40px;
-    padding-bottom: 40px;
-    background-color: #eee;
-    font-family: TitilliumText,Helvetica,Arial,sans-serif;
+.sign-errors {
+    max-width: 330px;
+    margin: 0 auto;
+    text-align: center;
 }
 
-.form-signin {
+.form-sign {
     max-width: 330px;
     padding: 15px;
     margin: 0 auto;
 }
 
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
+.form-sign .form-sign-heading,
+.form-sign .checkbox {
     margin-bottom: 10px;
     text-align: center;
     font-weight: 100;
 }
 
-.form-signin .checkbox {
+.form-sign .checkbox {
     font-weight: normal;
 }
 
-.form-signin .form-control {
+.form-sign .form-control {
     position: relative;
     height: auto;
     -webkit-box-sizing: border-box;
@@ -32,28 +31,27 @@ body {
     font-size: 16px;
 }
 
-.form-signin .form-control:focus {
+.form-sign .form-group {
+    margin: 0;
+    padding: 0;
+}
+
+.form-sign .form-control:focus {
     z-index: 2;
 }
 
-.form-signin input[type="email"],
-.form-signin input[type="text"],
-.form-signin input[type="password"] {
+.form-sign .form-group .form-control {
     border-radius: 0;
     margin: -1px auto;
 }
 
-.form-signin input[type="email"]:first-of-type,
-.form-signin input[type="text"]:first-of-type,
-.form-signin input[type="password"]:first-of-type {
+.form-sign .form-group:first-of-type .form-control {
     margin-bottom: -1px;
-    border-radius: 4px 4px 0 0;
+    border-radius: 6px 6px 0 0;
 }
 
-.form-signin input[type="email"]:last-of-type,
-.form-signin input[type="text"]:last-of-type,
-.form-signin input[type="password"]:last-of-type {
-    border-radius: 0 0 4px 4px;
+.form-sign .form-group:last-of-type .form-control {
+    border-radius: 0 0 6px 6px;
 }
 
 .sign-with {
