--- a/public/css/main.css
+++ b/public/css/main.css
@@ -24,3 +24,15 @@ body {
     border-radius: 6px;
     margin-bottom: 10px;
 }
+
+.navbar.navbar-center .navbar-nav {
+    display: inline-block;
+    float: none;
+}
+
+.navbar.navbar-center .navbar-collapse {
+    text-align: center;
+}
+.navbar.navbar-center .navbar-nav {
+    vertical-align: middle;
+}
