--- a/public/css/main.css
+++ b/public/css/main.css
@@ -38,7 +38,7 @@ body {
     vertical-align: middle;
 }
 
-.team {
+.game-graphic .team {
     display: inline-block;
 }
 
@@ -131,4 +131,20 @@ body {
 
 .game-information .controls .control-button > * {
     vertical-align: middle;
+}
+
+/* Creating of a game */
+.create-game-container {
+    background-color: rgb(255, 255, 255);
+    padding: 20px;
+    border-radius: 6px;
+    margin-bottom: 10px;
+    display: table;
+}
+
+.create-game-container .team-title {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 0 0 20px 0;
 }
