--- a/resources/assets/css/main.css
+++ b/resources/assets/css/main.css
@@ -18,7 +18,7 @@ body {
     padding-top: 60px;
 }
 
-.game-container {
+.game-container, .content-wrap {
     background-color: rgb(255, 255, 255);
     padding: 20px;
     border-radius: 6px;
