--- a/public/css/sign.css
+++ b/public/css/sign.css
@@ -1,84 +1,1 @@
-.sign-errors {
-    max-width: 330px;
-    margin: 0 auto;
-    text-align: center;
-}
-
-.form-sign {
-    max-width: 330px;
-    padding: 15px;
-    margin: 0 auto;
-}
-
-.form-sign .form-sign-heading,
-.form-sign .checkbox {
-    margin-bottom: 10px;
-    text-align: center;
-    font-weight: 100;
-}
-
-.form-sign .checkbox {
-    font-weight: normal;
-}
-
-.form-sign .form-control {
-    position: relative;
-    height: auto;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 10px;
-    font-size: 16px;
-}
-
-.form-sign .form-group {
-    margin: 0;
-    padding: 0;
-}
-
-.form-sign .form-control:focus {
-    z-index: 2;
-}
-
-.form-sign .form-group .form-control {
-    border-radius: 0;
-    margin: -1px auto;
-}
-
-.form-sign .form-group:first-of-type .form-control {
-    margin-bottom: -1px;
-    border-radius: 6px 6px 0 0;
-}
-
-.form-sign .form-group:last-of-type .form-control {
-    border-radius: 0 0 6px 6px;
-}
-
-.sign-with {
-    display: block;
-    width: 100%;
-    height: 50px;
-    line-height: 50px;
-    color: rgba(255, 255, 255, 0.6);
-    background-color: #3b5998;
-    text-align: center;
-    border-radius: 6px;
-    font-size: 16px;
-    text-decoration: none;
-}
-
-.sign-with:hover, .sign-with:focus {
-    color: white;
-    text-decoration: none;
-}
-
-.sign-choices {
-    height: 50px;
-    line-height: 50px;
-    text-align: center;
-}
-
-.sign-controls {
-    margin-top: 30px;
-}
-/*# sourceMappingURL=sign.css.map */
+.sign-errors{text-align:center}.form-sign,.sign-errors{max-width:330px;margin:0 auto}.form-sign{padding:15px}.form-sign .checkbox,.form-sign .form-sign-heading{margin-bottom:10px;text-align:center;font-weight:100}.form-sign .checkbox{font-weight:400}.form-sign .form-control{position:relative;height:auto;box-sizing:border-box;padding:10px;font-size:16px}.form-sign .form-group{margin:0;padding:0}.form-sign .form-control:focus{z-index:2}.form-sign .form-group .form-control{border-radius:0;margin:-1px auto}.form-sign .form-group:first-of-type .form-control{margin-bottom:-1px;border-radius:6px 6px 0 0}.form-sign .form-group:last-of-type .form-control{border-radius:0 0 6px 6px}.sign-with{display:block;width:100%;height:50px;line-height:50px;color:hsla(0,0%,100%,.6);background-color:#3b5998;text-align:center;border-radius:6px;font-size:16px;text-decoration:none}.sign-with:focus,.sign-with:hover{color:#fff;text-decoration:none}.sign-choices{height:50px;line-height:50px;text-align:center}.sign-controls{margin-top:30px}
