--- a/public/html/views/auth/signup.html
+++ b/public/html/views/auth/signup.html
@@ -1,3 +1,7 @@
+<div class="alert alert-danger sign-errors" ng-if="errors.length > 0">
+    <div ng-repeat="error in errors"><% error %></div>
+</div>
+
 <form class="form-sign" method="POST" action="/signup">
     <h2 class="form-sign-heading">Please sign up</h2>
     <a href="/fb/signin" class="sign-with">Sign up with Facebook</a>
@@ -6,22 +10,22 @@
     <div class="form-inputs">
         <div class="form-group">
             <label for="inputName" class="sr-only">Name</label>
-            <input type="text" id="inputName" class="form-control" name="name"
-                   value="" placeholder="Name" required autofocus>
+            <input type="text" id="inputName" class="form-control" name="name" ng-model="user.name"
+                   placeholder="Name" required autofocus>
         </div>
         <div class="form-group">
             <label for="inputEmail" class="sr-only">Email address</label>
-            <input type="email" id="inputEmail" class="form-control" name="email"
-                   value="" placeholder="Email address" required>
+            <input type="email" id="inputEmail" class="form-control" ng-model="user.email"
+                   placeholder="Email address" required>
         </div>
         <div class="form-group">
             <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="inputPassword" class="form-control" name="password"
-                   value="" placeholder="Password" required>
+            <input type="password" id="inputPassword" class="form-control" name="password" ng-model="user.password"
+                   placeholder="Password" required>
         </div>
     </div>
 
     <div class="sign-controls">
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="update(user)">Sign up</button>
     </div>
 </form>
