--- a/public/html/views/chart/index.html
+++ b/public/html/views/chart/index.html
@@ -1,4 +1,4 @@
-<div class="row" ng-app="kickerApp" ng-controller="ChartsCtrl">
+<div class="row" ng-controller="ChartsCtrl">
     <div class="col-md-8 col-md-offset-2 content-wrap">
         <h3 class="text-center">User's chart</h3>
         <table class="table table-bordered table-condensed">
