--- a/resources/assets/app/views/auth/signup.html
+++ b/resources/assets/app/views/auth/signup.html
@@ -26,6 +26,6 @@
     </div>
 
     <div class="sign-controls">
-        <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="update(user)">Sign up</button>
+        <button class="btn btn-lg btn-primary btn-block" type="button" ng-click="signup(user)">Sign up</button>
     </div>
 </form>
