[WIP] Game update page has been changed to single page style.

--- a/resources/assets/app/views/games/index.html
+++ b/resources/assets/app/views/games/index.html
@@ -69,7 +69,7 @@
                 <div class="controls" ng-if="user.isGuest === false">
                     <a href="#"
                        class="btn btn-default btn-xs control-button"
-                       ng-href="/game/<% game.id %>/update"
+                       ng-href="#/game/<% game.id %>/update"
                        ng-if="user.isAdmin"
                     ><i class="fa fa-pencil"></i></a>
                     <a href="#"
