--- a/public/html/views/games/update.html
+++ b/public/html/views/games/update.html
@@ -93,7 +93,12 @@
             </div>
 
             <div class="text-center">
-                <button class="btn btn-primary" type="button" ng-click="update()">Save</button>
+                <button class="btn btn-primary" type="button" ng-click="update()" ng-if="loading === false">
+                    Save
+                </button>
+                <button class="btn btn-primary" type="button" ng-if="loading" disabled="disabled">
+                    <span ng-if="loading"><i class="fa fa-refresh fa-spin"></i></span> Saving ...
+                </button>
             </div>
         </form>
     </div>
