--- a/resources/assets/app/views/games/index.html
+++ b/resources/assets/app/views/games/index.html
@@ -94,9 +94,11 @@
         </div>
     </div>
     <div class="row games-pages" ng-if="currentpage < lastpage">
-        <button class="btn btn-primary" ng-click="loadMore()">
-            <span ng-if="loading"><i class="fa fa-refresh fa-spin"></i></span>
-            <span ng-if="!loading"><i class="fa fa-refresh"></i></span> more...
+        <button class="btn btn-primary" ng-if="loading" disabled="disabled">
+            <span><i class="fa fa-refresh fa-spin"></i></span> more...
+        </button>
+        <button class="btn btn-primary" ng-if="loading === false" ng-click="loadMore()">
+            <span><i class="fa fa-refresh"></i></span> more...
         </button>
     </div>
 </div>
