--- a/resources/assets/app/views/games/update.html
+++ b/resources/assets/app/views/games/update.html
@@ -97,7 +97,7 @@
                     Save
                 </button>
                 <button class="btn btn-primary" type="button" ng-if="loading" disabled="disabled">
-                    <span ng-if="loading"><i class="fa fa-refresh fa-spin"></i></span> Saving ...
+                    <span><i class="fa fa-refresh fa-spin"></i></span> Saving ...
                 </button>
             </div>
         </form>
