--- a/resources/assets/app/views/games/index.html
+++ b/resources/assets/app/views/games/index.html
@@ -18,13 +18,8 @@
                         <div class="user-avatar">
                             <img ng-src="<% gameUser.user.avatarUrl() %>" />
                             <div class="stat">
-                                    <span class="wins"><%
-                                        gameUser.user.count_wins
-                                    %></span>/<span class="loses"><%
-                                        gameUser.user.count_looses
-                                    %></span>/<span class="draws"><%
-                                        gameUser.user.count_draws
-                                    %></span>
+                                <span class="wins"><% gameUser.user.count_wins %></span> /
+                                <span class="loses"><% gameUser.user.count_looses %></span>
                             </div>
                         </div>
                     </div>
@@ -42,13 +37,8 @@
                         <div class="user-avatar">
                             <img ng-src="<% gameUser.user.avatarUrl() %>" />
                             <div class="stat">
-                                    <span class="wins"><%
-                                        gameUser.user.count_wins
-                                    %></span>/<span class="loses"><%
-                                        gameUser.user.count_looses
-                                    %></span>/<span class="draws"><%
-                                        gameUser.user.count_draws
-                                    %></span>
+                                <span class="wins"><% gameUser.user.count_wins %></span> /
+                                <span class="loses"><% gameUser.user.count_looses %></span>
                             </div>
                         </div>
                         <div class="info">
