--- a/resources/assets/css/main.css
+++ b/resources/assets/css/main.css
@@ -184,6 +184,7 @@ body {
     position: absolute;
     bottom: 0;
     right: 0;
+    text-align: right;
 }
 
 .game-information .additional-info .complaints {
@@ -191,10 +192,9 @@ body {
 }
 
 .game-information .controls .control-button {
-    width: 22px;
+    min-width: 22px;
     height: 22px;
     text-align: center;
-    padding: 0;
 }
 
 .game-information .controls .control-button > * {
@@ -307,4 +307,28 @@ body {
 
 .sign-controls {
     margin-top: 30px;
+}
+
+.complain-user {
+    padding: 0;
+}
+
+.complain-user {
+    margin-left: 5px;
+}
+
+.complain-user:first-of-type {
+    margin-left: 0;
+}
+
+.complain-user img {
+    display: inline-block !important;
+    white-space: nowrap;
+    max-height: 40px;
+    max-width: 40px;
+}
+
+.tooltip-inner {
+    white-space: nowrap;
+    padding: 5px;
 }
