Complainers are shown now.

--- a/public/html/views/games/index.html
+++ b/public/html/views/games/index.html
@@ -73,6 +73,7 @@
                        class="btn btn-danger btn-xs control-button"
                        ng-if="user.isUser"
                        tooltip-placement="top"
+                       tooltip-popup-close-delay="1000"
                        uib-tooltip-html="game.complaintsHtml"
                     ><i class="fa fa-flag"></i> <span ng-if="game.complaints.length > 0"><% game.complaints.length %></span></a>
                 </div>
