--- a/resources/assets/app/views/chart/index.html
+++ b/resources/assets/app/views/chart/index.html
@@ -1,21 +1,32 @@
 <div class="row" ng-controller="ChartsCtrl">
     <div class="col-md-8 col-md-offset-2 content-wrap">
         <h3 class="text-center">User's chart</h3>
-        <table class="table table-bordered table-condensed">
+        <table class="table table-bordered table-condensed users-chart">
             <thead>
             <tr>
-                <th>#</th>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Rating</th>
-                <th>Games played</th>
-                <th>Games lost</th>
-                <th>Games won</th>
-                <th>Games draw</th>
+                <th><a href="#" onclick="return false;" ng-click="orderByField = 'index'; reverseSort = !reverseSort">#</a></th>
+                <th><a href="#" onclick="return false;" ng-click="orderByField = 'name'; reverseSort = !reverseSort">Name</a></th>
+                <th><a href="#" onclick="return false;" ng-click="orderByField = 'email'; reverseSort = !reverseSort">Email</a></th>
+                <th><a href="#" onclick="return false;" ng-click="orderByField = 'rating'; reverseSort = !reverseSort">Rating</a></th>
+                <th>
+                    <a href="#"
+                       onclick="return false;" ng-click="orderByField = 'countGamesPlayed'; reverseSort = !reverseSort"
+                    >Games Played</a>
+                </th>
+                <th>
+                    <a href="#"
+                       onclick="return false;" ng-click="orderByField = 'count_looses'; reverseSort = !reverseSort"
+                    >Games Lost</a>
+                </th>
+                <th>
+                    <a href="#"
+                       onclick="return false;" ng-click="orderByField = 'count_wins'; reverseSort = !reverseSort"
+                    >Games Won</a>
+                </th>
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="user in users">
+            <tr ng-repeat="user in users|orderBy:orderByField:reverseSort" ng-class="me.id === user.id ? 'current-user' : ''">
                 <td><% user.index %></td>
                 <td><% user.name %></td>
                 <td><% user.email %></td>
@@ -23,7 +34,6 @@
                 <td><% user.countGames() %></td>
                 <td><% user.count_looses %></td>
                 <td><% user.count_wins %></td>
-                <td><% user.count_draws %></td>
             </tr>
             </tbody>
         </table>
