If there are no items in the drop-down list "No results..." message appears.

--- a/public/html/views/games/create.html
+++ b/public/html/views/games/create.html
@@ -14,8 +14,10 @@
                             <ui-select-match placeholder="Select players..."><% $item.name %></ui-select-match>
                             <ui-select-choices repeat="user in usersSearch track by $index"
                                                refresh="findUsers($select.search)"
+                                               ui-disable-choice="!user.id"
                                                refresh-delay="0">
-                                <% user.name %> (<% user.email %>)
+                                <span ng-if="user.id"> <% user.name %> (<% user.email %>)</span>
+                                <span ng-if="!user.id"> <% user.name %></span>
                             </ui-select-choices>
                         </ui-select>
 
@@ -53,8 +55,10 @@
                             <ui-select-match placeholder="Select players..."><% $item.name %></ui-select-match>
                             <ui-select-choices repeat="user in usersSearch track by $index"
                                                refresh="findUsers($select.search)"
+                                               ui-disable-choice="!user.id"
                                                refresh-delay="0">
-                                <% user.name %> (<% user.email %>)
+                                <span ng-if="user.id"> <% user.name %> (<% user.email %>)</span>
+                                <span ng-if="!user.id"> <% user.name %></span>
                             </ui-select-choices>
                         </ui-select>
 
