--- a/resources/assets/app/views/games/create.html
+++ b/resources/assets/app/views/games/create.html
@@ -31,7 +31,7 @@
                 <div class="form-group">
                     <label for="pointsA" class="col-sm-2 control-label">Points</label>
                     <div class="col-sm-10">
-                        <input id="pointsA" ng-model="game.points.a" type="number" class="form-control"
+                        <input id="pointsA" ng-model="game.points.a" type="text" class="form-control"
                                number-only
                                min="<% game.MIN_POINTS %>"
                                max="<% game.MAX_POINTS %>"
@@ -73,7 +73,7 @@
                 <div class="form-group">
                     <label for="pointsB" class="col-sm-2 control-label">Points</label>
                     <div class="col-sm-10">
-                        <input id="pointsB" ng-model="game.points.b" type="number" class="form-control"
+                        <input id="pointsB" ng-model="game.points.b" type="text" class="form-control"
                                number-only
                                min="<% game.MIN_POINTS %>"
                                max="<% game.MAX_POINTS %>"
