User search for adding and updating of a game was fixed.

--- a/public/html/views/games/create.html
+++ b/public/html/views/games/create.html
@@ -10,7 +10,8 @@
                                    ng-model="game.users.a"
                                    theme="bootstrap" sortable="true"
                                    limit="2"
-                                   on-select="onSelectUser($item, $model)"
+                                   on-select="onSelectUser($item)"
+                                   on-remove="onRemoveUser($item)"
                                    ng-disabled="disabled" title="Players of Team A">
                             <ui-select-match placeholder="Select players..."><% $item.name %></ui-select-match>
                             <ui-select-choices repeat="user in usersSearch track by $index"
@@ -52,6 +53,8 @@
                         <ui-select multiple id="usersB"
                                    ng-model="game.users.b"
                                    limit="2"
+                                   on-select="onSelectUser($item)"
+                                   on-remove="onRemoveUser($item)"
                                    theme="bootstrap" sortable="true"
                                    ng-disabled="disabled"  title="Players of Team B">
                             <ui-select-match placeholder="Select players..."><% $item.name %></ui-select-match>
