--- a/resources/assets/css/main.css
+++ b/resources/assets/css/main.css
@@ -1,366 +1,1 @@
-body {
-    background-color: #eee;
-    font-family: TitilliumText,Helvetica,Arial,sans-serif;
-}
-
-.navbar-nav > li > a, .navbar-brand {
-    padding-top: 4px;
-    padding-bottom: 0;
-    height: 28px;
-}
-
-.navbar {
-    min-height: 28px;
-    margin-bottom: 0;
-}
-
-.main-container {
-    padding-top: 60px;
-}
-
-.game-container, .content-wrap {
-    background-color: rgb(255, 255, 255);
-    padding: 20px;
-    border-radius: 6px;
-    margin-bottom: 10px;
-    display: table;
-}
-
-.navbar.navbar-center .navbar-nav {
-    display: inline-block;
-    float: none;
-}
-
-.navbar.navbar-center .navbar-collapse {
-    text-align: center;
-}
-.navbar.navbar-center .navbar-nav {
-    vertical-align: middle;
-}
-
-/* Games */
-.games-pages {
-    text-align: center;
-}
-
-.game-graphic .team {
-    display: inline-block;
-}
-
-.result-container {
-    display: inline-block;
-    font-size: 24px;
-    /*line-height: 48px;*/
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 43px;
-    vertical-align: top;
-}
-
-.team-user {
-    width: 190px;
-}
-
-.team-user > * {
-    display: inline-block;
-    vertical-align: middle;
-}
-
-.team-user .user-avatar {
-    height: 70px;
-    width: 70px;
-    background-color: #8ca1dc;
-    position: relative;
-}
-
-.team-user .user-avatar img {
-    max-height: 70px;
-    max-width: 70px;
-}
-
-.team-user .user-avatar .stat {
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    right: 0;
-    background-color: rgba(255, 255, 255, 0.9);
-    text-align: right;
-    padding: 0 2px;
-    display: none;
-    font-weight: 600;
-}
-
-.team-user .user-avatar:hover .stat {
-    display: block;
-}
-
-.team-user .user-avatar .stat .wins {
-    color: #8ca1dc;
-}
-
-.team-user .user-avatar .stat .loses {
-    color: #c90000;
-}
-
-.team-user .user-avatar .stat .draws {
-    color: rgb(136, 136, 136);
-}
-
-.team-user:last-of-type {
-    margin-top: 5px;
-}
-
-.result .point {
-    display: inline-block;
-}
-
-.result .point.win {
-    font-weight: bold;
-    color: #8ca1dc;
-}
-
-.result .point.lose {
-    color: #c90000;
-}
-
-.result-container .versus {
-    text-align: center;
-}
-
-.team-b {
-    text-align: left;
-}
-
-.team-b .info {
-    padding-left: 10px;
-}
-
-.team .info .name {
-    max-width: 103px;
-}
-
-.team .info .rating-delta.lose {
-    font-weight: bold;
-    color: #c90000;
-}
-
-.team .info .rating-delta.win {
-    font-weight: bold;
-    color: #8ca1dc;
-}
-
-.team-a {
-    text-align: right;
-}
-
-.team-a .info {
-    padding-right: 10px;
-}
-
-.game-graphic {
-    display: inline-block;
-    text-align: center;
-}
-
-.game-information {
-    position: relative;
-    vertical-align: middle;
-    display: table-cell;
-    text-align: center;
-}
-
-.game-information .game-name {
-    font-size: 25px;
-    text-align: center;
-}
-
-.game-information .controls {
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-
-.game-information .additional-info {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    text-align: right;
-}
-
-.game-information .additional-info .complaints {
-    color: #c90000;
-}
-
-.game-information .controls .control-button {
-    min-width: 22px;
-    height: 22px;
-    text-align: center;
-}
-
-.game-information .controls .control-button > * {
-    vertical-align: middle;
-}
-
-/* Creating of a game */
-.create-game-container {
-    background-color: rgb(255, 255, 255);
-    padding: 20px;
-    border-radius: 6px;
-    margin-bottom: 10px;
-    display: table;
-}
-
-.create-game-container .team-title {
-    text-align: center;
-    font-size: 20px;
-    font-weight: 600;
-    padding: 0 0 20px 0;
-}
-
-.create-game-container .error {
-    color: #c90000;
-}
-
-[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
-    display: none !important;
-}
-
-.sign-errors {
-    max-width: 330px;
-    margin: 0 auto;
-    text-align: center;
-}
-
-.form-sign {
-    max-width: 330px;
-    padding: 15px;
-    margin: 0 auto;
-}
-
-.form-sign .form-sign-heading,
-.form-sign .checkbox {
-    margin-bottom: 10px;
-    text-align: center;
-    font-weight: 100;
-}
-
-.form-sign .checkbox {
-    font-weight: normal;
-}
-
-.form-sign .form-control {
-    position: relative;
-    height: auto;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 10px;
-    font-size: 16px;
-}
-
-.form-sign .form-group {
-    margin: 0;
-    padding: 0;
-}
-
-.form-sign .form-control:focus {
-    z-index: 2;
-}
-
-.form-sign .form-group .form-control {
-    border-radius: 0;
-    margin: -1px auto;
-}
-
-.form-sign .form-group:first-of-type .form-control {
-    margin-bottom: -1px;
-    border-radius: 6px 6px 0 0;
-}
-
-.form-sign .form-group:last-of-type .form-control {
-    border-radius: 0 0 6px 6px;
-}
-
-.sign-with {
-    display: block;
-    width: 100%;
-    height: 50px;
-    line-height: 50px;
-    color: rgba(255, 255, 255, 0.6);
-    background-color: #3b5998;
-    text-align: center;
-    border-radius: 6px;
-    font-size: 16px;
-    text-decoration: none;
-}
-
-.sign-with:hover, .sign-with:focus {
-    color: white;
-    text-decoration: none;
-}
-
-.sign-choices {
-    height: 50px;
-    line-height: 50px;
-    text-align: center;
-}
-
-.sign-controls {
-    margin-top: 30px;
-}
-
-.complain-user {
-    padding: 0;
-}
-
-.complain-user {
-    margin-left: 5px;
-    text-align: center;
-    display: inline-block;
-}
-
-.complain-user:first-of-type {
-    margin-left: 0;
-}
-
-.complain-user img {
-    max-height: 40px;
-    max-width: 40px;
-    display: block;
-}
-
-.tooltip-inner {
-    white-space: nowrap;
-    padding: 5px;
-    max-width: 250px;
-}
-
-.see-all-complainers {
-    color: rgba(230, 229, 231, 0.8);
-}
-
-.see-all-complainers:hover {
-    color: #e6e5e7;
-}
-
-.complain-user-list {
-    display: inline-block;
-    text-align: center;
-    padding: 5px;
-}
-
-.complain-user-list .avatar {
-    display: block;
-    height: 80px;
-}
-
-.complain-user-list .avatar img {
-    max-width: 80px;
-    max-height: 80px;
-    display: block;
-    margin: 0 auto;
-}
-
-.users-chart .current-user td {
-    background-color: rgba(140, 161, 220, 0.45);
-}
+body{background-color:#eee;font-family:TitilliumText,Helvetica,Arial,sans-serif}.col-centered{float:none;margin:0 auto}.main-container{padding-top:4.28em}.content-wrap,.create-game-container{background-color:#fff;padding:20px;border-radius:6px;margin-bottom:10px;display:table}.create-game-container .team-title{text-align:center;font-size:20px;font-weight:600;padding:0 0 20px}.create-game-container .error{color:#c90000}.ng-cloak,.x-ng-cloak,[data-ng-cloak],[ng-cloak],[ng\:cloak],[x-ng-cloak]{display:none!important}.sign-errors{text-align:center}.form-sign,.sign-errors{max-width:330px;margin:0 auto}.form-sign{padding:15px}.form-sign .checkbox,.form-sign .form-sign-heading{margin-bottom:10px;text-align:center;font-weight:100}.form-sign .checkbox{font-weight:400}.form-sign .form-control{position:relative;height:auto;box-sizing:border-box;padding:10px;font-size:16px}.form-sign .form-group{margin:0;padding:0}.form-sign .form-control:focus{z-index:2}.form-sign .form-group .form-control{border-radius:0;margin:-1px auto}.form-sign .form-group:first-of-type .form-control{margin-bottom:-1px;border-radius:6px 6px 0 0}.form-sign .form-group:last-of-type .form-control{border-radius:0 0 6px 6px}.sign-with{display:block;width:100%;height:50px;line-height:50px;color:hsla(0,0%,100%,.6);background-color:#3b5998;text-align:center;border-radius:6px;font-size:16px;text-decoration:none}.sign-with:focus,.sign-with:hover{color:#fff;text-decoration:none}.sign-choices{height:50px;line-height:50px;text-align:center}.sign-controls{margin-top:30px}.complain-user{padding:0;margin-left:5px;text-align:center;display:inline-block}.complain-user:first-of-type{margin-left:0}.complain-user img{max-height:40px;max-width:40px;display:block}.tooltip-inner{white-space:nowrap;padding:5px;max-width:250px}.see-all-complainers{color:hsla(270,4%,90%,.8)}.see-all-complainers:hover{color:#e6e5e7}.complain-user-list{display:inline-block;text-align:center;padding:5px}.complain-user-list .avatar{display:block;height:80px}.complain-user-list .avatar img{max-width:80px;max-height:80px;display:block;margin:0 auto}.users-chart .current-user td{background-color:rgba(140,161,220,.45)}.navbar-brand,.navbar-nav>li>a{padding-top:.28em;padding-bottom:0;height:2em}.navbar{min-height:2em;margin-bottom:0}.navbar.navbar-center .navbar-nav{display:inline-block;float:none}.navbar.navbar-center .navbar-collapse{text-align:center}.navbar.navbar-center .navbar-nav{vertical-align:middle}.game-container{background-color:#fff;padding:20px;border-radius:.42em;margin-bottom:.7em;display:table}.games-pages{text-align:center}.game-graphic .team,.result-container{display:inline-block;vertical-align:top}.result-container{font-size:1.7em;padding-left:20px;padding-right:20px;padding-top:1.5em}.team-user>*{display:inline-block;vertical-align:middle}.team-user .user-avatar{background-color:#8ca1dc;position:relative}.team-user .user-avatar .stat{position:absolute;width:100%;bottom:0;right:0;background-color:hsla(0,0%,100%,.9);text-align:right;padding:0 2px;display:none;font-weight:600}.team-user .user-avatar:hover .stat{display:block}.team-user .user-avatar .stat .wins{color:#8ca1dc}.team-user .user-avatar .stat .loses{color:#c90000}.team-user .user-avatar .stat .draws{color:#888}.team-user:last-of-type{margin-top:5px}.result .point{display:inline-block}.result .point.win{font-weight:700;color:#8ca1dc}.result .point.lose{color:#c90000}.result-container .versus{text-align:center}.team-b{text-align:left}.team-b .info{padding-left:10px}.team .info .rating-delta{font-size:.92em}.team .info .rating-delta.lose{font-weight:700;color:#c90000}.team .info .rating-delta.win{font-weight:700;color:#8ca1dc}.team-a{text-align:right}.team-a .info{padding-right:10px}.game-graphic{display:inline-block;text-align:center}.game-information{position:relative;vertical-align:middle;display:table-cell;text-align:center}.game-information .game-name{font-size:25px;text-align:center}.game-information .controls{position:absolute;right:0}.game-information .additional-info{position:absolute;bottom:0;right:0;text-align:right}.game-information .additional-info .complaints{color:#c90000}.game-information .controls .control-button{min-width:2em;height:2em;font-size:.85em;text-align:center}.game-information .controls .control-button>*{vertical-align:middle;font-size:1em}@media (max-device-width:767px){.game-graphic{display:block}.game-information{display:block;padding:2em 0}.result-container{padding-left:0;padding-right:0}.game-graphic .team-user{width:100px}.team-user .user-avatar,.team-user .user-avatar img{display:none}.game-information .controls{bottom:0}}@media (min-device-width:768px){.game-graphic{display:block}.game-information{display:block;padding:2em 0}.game-information .controls{bottom:0}}@media (min-device-width:992px){.game-graphic{display:inline-block}.game-information{display:table-cell}.game-information .controls{top:0}}@media (min-device-width:1200px){.games-container .game-container{max-width:760px!important}.game-information{display:table-cell}.game-information .controls{top:0}}
