--- a/resources/assets/app/views/chart/index.html
+++ b/resources/assets/app/views/chart/index.html
@@ -1,27 +1,39 @@
 <div class="row" ng-controller="ChartsCtrl">
-    <div class="col-md-8 col-md-offset-2 content-wrap">
+    <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12 col-centered content-wrap">
         <h3 class="text-center">User's chart</h3>
         <table class="table table-bordered table-condensed users-chart">
             <thead>
             <tr>
                 <th><a href="#" onclick="return false;" ng-click="orderByField = 'index'; reverseSort = !reverseSort">#</a></th>
                 <th><a href="#" onclick="return false;" ng-click="orderByField = 'name'; reverseSort = !reverseSort">Name</a></th>
-                <th><a href="#" onclick="return false;" ng-click="orderByField = 'email'; reverseSort = !reverseSort">Email</a></th>
-                <th><a href="#" onclick="return false;" ng-click="orderByField = 'rating'; reverseSort = !reverseSort">Rating</a></th>
+                <th class="user-email"><a href="#" onclick="return false;" ng-click="orderByField = 'email'; reverseSort = !reverseSort">Email</a></th>
+                <th><a href="#" onclick="return false;" ng-click="orderByField = 'rating'; reverseSort = !reverseSort">
+                    <span class="normal-text">Rating</span>
+                    <span class="collapsed-text">R</span>
+                </a></th>
                 <th>
                     <a href="#"
                        onclick="return false;" ng-click="orderByField = 'countGamesPlayed'; reverseSort = !reverseSort"
-                    >Games Played</a>
+                    >
+                        <span class="normal-text">Games Played</span>
+                        <span class="collapsed-text">T</span>
+                    </a>
                 </th>
                 <th>
                     <a href="#"
                        onclick="return false;" ng-click="orderByField = 'count_looses'; reverseSort = !reverseSort"
-                    >Games Lost</a>
+                    >
+                        <span class="normal-text">Games Lost</span>
+                        <span class="collapsed-text">L</span>
+                    </a>
                 </th>
                 <th>
                     <a href="#"
                        onclick="return false;" ng-click="orderByField = 'count_wins'; reverseSort = !reverseSort"
-                    >Games Won</a>
+                    >
+                        <span class="normal-text">Games Win</span>
+                        <span class="collapsed-text">W</span>
+                    </a>
                 </th>
             </tr>
             </thead>
@@ -29,7 +41,7 @@
             <tr ng-repeat="user in users|orderBy:orderByField:reverseSort" ng-class="me.id === user.id ? 'current-user' : ''">
                 <td><% user.index %></td>
                 <td><% user.name %></td>
-                <td><% user.email %></td>
+                <td class="user-email"><% user.email %></td>
                 <td><% user.rating %></td>
                 <td><% user.countGames() %></td>
                 <td><% user.count_looses %></td>
