--- a/resources/assets/less/chart.less
+++ b/resources/assets/less/chart.less
@@ -1,6 +1,12 @@
 @import "variables";
 
+.games-lost {
+  color: @color-loser;
+}
 
+.games-win {
+  color: @color-winner;
+}
 
 /* XS */
 @media (max-width: @screen-xs-max) {
