--- a/resources/assets/less/games.less
+++ b/resources/assets/less/games.less
@@ -33,7 +33,7 @@
 }
 
 .team-user .user-avatar {
-  background-color: #8ca1dc;
+  background-color: @color-winner;
   position: relative;
 }
 
@@ -54,11 +54,11 @@
 }
 
 .team-user .user-avatar .stat .wins {
-  color: #8ca1dc;
+  color: @color-winner;
 }
 
 .team-user .user-avatar .stat .loses {
-  color: #c90000;
+  color: @color-loser;
 }
 
 .team-user .user-avatar .stat .draws {
@@ -75,11 +75,11 @@
 
 .result .point.win {
   font-weight: bold;
-  color: #8ca1dc;
+  color: @color-winner;
 }
 
 .result .point.lose {
-  color: #c90000;
+  color: @color-loser;
 }
 
 .result-container .versus {
@@ -100,12 +100,12 @@
 
 .team .info .rating-delta.lose {
   font-weight: bold;
-  color: #c90000;
+  color: @color-loser;
 }
 
 .team .info .rating-delta.win {
   font-weight: bold;
-  color: #8ca1dc;
+  color: @color-winner;
 }
 
 .team-a {
@@ -146,7 +146,7 @@
 }
 
 .game-information .additional-info .complaints {
-  color: #c90000;
+  color: @color-loser;
 }
 
 .game-information .controls .control-button {
