--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -40,7 +40,7 @@ body {
 }
 
 .create-game-container .error {
-  color: #c90000;
+  color: @color-error;
 }
 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
@@ -190,7 +190,7 @@ body {
 /* XS */
 @media (max-width: @screen-xs-max) {
   .content-wrap {
-    padding: 0;
+    padding: 5px;
   }
 
   .normal-text {
