--- a/resources/assets/less/navbar.less
+++ b/resources/assets/less/navbar.less
@@ -23,3 +23,10 @@
 .navbar.navbar-center .navbar-nav {
   vertical-align: middle;
 }
+
+/* XS */
+@media (max-device-width: @screen-xs-max) {
+  .navbar-collapse * {
+    font-size: 18px;
+  }
+}
