--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -37,3 +37,7 @@
 @team-user-width: 190px;
 @user-name-max-width: 103px;
 @user-avatar-max-size: 70px;
+
+@color-winner: #8ca1dc;
+@color-loser: #c90000;
+@color-error: #c90000;
