--- a/resources/assets/app/views/games/update.html
+++ b/resources/assets/app/views/games/update.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-8 col-md-offset-2 create-game-container">
+    <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12 col-centered create-game-container">
         <form class="form-horizontal">
             <div class="team">
                 <div class="team-title">Team A</div>
