Colors for chart were added.

--- a/public/html/views/chart/index.html
+++ b/public/html/views/chart/index.html
@@ -44,8 +44,8 @@
                 <td class="user-email"><% user.email %></td>
                 <td><% user.rating %></td>
                 <td><% user.countGames() %></td>
-                <td class="games-win"><% user.count_looses %></td>
-                <td><% user.count_wins %></td>
+                <td class="games-lost"><% user.count_looses %></td>
+                <td class="games-win"><% user.count_wins %></td>
             </tr>
             </tbody>
         </table>
